# kakure

./: .gitignore  Cargo.toml
kakure-cli/: Cargo.toml
kakure-cli/src/: main.rs
kakure-core/: Cargo.toml
kakure-core/src/: binary.rs  function_signature.rs  header.rs  lib.rs  sections.rs
kakure-core/src/function_signature/: call_graph.rs  frame_analyzers.rs
kakure-core/src/function_signature/frame_analyzers/: eh_frame.rs  symtab.rs
kakure-core/src/header/: elf.rs
kakure-vm/: Cargo.toml
