[package]
name = "kakure-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
kakure-core = { path = "../kakure-core" }
kakure-vm = { path = "../kakure-vm" }
clap = { version = "4.5.50", features = ["derive"] }
