[package]
name = "kakure-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
kakure-core = { path = "../kakure-core" }
kakure-vm = { path = "../kakure-vm" }
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
colored = "3.0.0"
